KaaSOrchestration/QA/API/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaas-analytics-coe-ens-api-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaas-analytics-coe-ens-api-qa
  template:
    metadata:
      labels:
        app: kaas-analytics-coe-ens-api-qa
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
        supplementalGroups:
            - 4000
      imagePullSecrets:
      - name: analyticsjfrogqa
      containers:
      - name: kaas-analytics-coe-ens-api-qa  #eyctpeu-analyticscoe-docker-dev.jfrog.io/analyticscoe-docker-dev/analyticsuiapp:v20241010.1 
        image: #{kubernetesimageQAENSAPI}#    
        imagePullPolicy: Always
        #envFrom:
        #- configMapRef:
            #name: openai-configuration
      #restartPolicy: Never
        securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 2000
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
        resources:
          requests:
            cpu: 500m 
            memory: "2Gi"
          limits:
            cpu: 1000m
            memory: "4Gi"
        ports:
        - containerPort: 9001
      volumes:
      - name: keyvault
        secret:
          secretName: secrets-ens-api-qa
